fixed a snag in the animation; canvas looked like it was flickering due to using display:none instead of visibility:hidden on the instruct tag

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@
   padding: 0; 
 }
 
+.invisible {
+  visibility:hidden;
+}
+
 .hidden {
   display:none;
 }
